force-app/core/main/default/objects/Demo_Persona_Identity__c/Demo_Persona_Identity__c.object-meta.xml
<CustomObject>
    <label>Persona Identity</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Persona Identity ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Persona Identitys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>