force-app/core/main/default/objects/Demo_Persona_Identity__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Email</fullName><default>false</default><label>Email</label></value>
            <value><fullName>Phone</fullName><default>false</default><label>Phone</label></value>
            <value><fullName>Address</fullName><default>false</default><label>Address</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>